--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -26,12 +26,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="16dp"
         android:hint="@string/email_id"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextResetID" />
 
     <EditText
         android:id="@+id/editTextResetID"
@@ -39,34 +41,63 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/employee_id"
-        android:textSize="16dp"
         android:inputType="number"
+        android:maxLines="1"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextResetEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textViewOR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
+        android:text="@string/or"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextResetID" />
+
+    <EditText
+        android:id="@+id/editTextDOBID"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:hint="@string/dateofbirth"
+        android:maxLines="1"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewOR" />
 
     <TextView
         android:id="@+id/textViewBackLinkId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="8dp"
         android:text="@string/back"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/editTextResetID"
-        app:layout_constraintTop_toBottomOf="@+id/editTextResetID" />
+        app:layout_constraintStart_toStartOf="@+id/editTextDOBID"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDOBID" />
 
     <TextView
         android:id="@+id/textViewSubmitLinkId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginTop="8dp"
         android:text="@string/submit"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/editTextResetID"
-        app:layout_constraintTop_toBottomOf="@+id/editTextResetID" />
+        app:layout_constraintEnd_toEndOf="@+id/editTextDOBID"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDOBID" />
 
 </android.support.constraint.ConstraintLayout>
