--- a/app/src/main/res/layout/activity_mark_attendance.xml
+++ b/app/src/main/res/layout/activity_mark_attendance.xml
@@ -46,14 +46,14 @@
                             android:layout_width="0dp"
                             android:layout_weight=".4"
                             android:layout_height="wrap_content"
-                            android:textSize="15dp"
+                            android:textSize="14sp"
                             android:text="@string/employee_name"
                             android:textStyle="bold" />
                         <TextView
                             android:layout_width="5dp"
                             android:layout_height="match_parent"
                             android:text=":"
-                            android:textSize="15dp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -62,7 +62,7 @@
                             android:layout_weight=".6"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:textSize="15dp"/>
+                            android:textSize="14sp"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -76,13 +76,13 @@
                             android:layout_weight=".4"
                             android:layout_height="wrap_content"
                             android:text="@string/employee_id"
-                            android:textSize="15dp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
                         <TextView
                             android:layout_width="5dp"
                             android:layout_height="match_parent"
                             android:text=":"
-                            android:textSize="15dp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -91,7 +91,7 @@
                             android:layout_weight=".6"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:textSize="15dp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -105,13 +105,13 @@
                             android:layout_weight=".4"
                             android:layout_height="match_parent"
                             android:text="@string/designation"
-                            android:textSize="15dp"
+                            android:textSize="14dp"
                             android:textStyle="bold" />
                         <TextView
                             android:layout_width="5dp"
                             android:layout_height="match_parent"
                             android:text=":"
-                            android:textSize="15dp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -120,7 +120,7 @@
                             android:layout_weight=".6"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="10dp"
-                            android:textSize="15dp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -133,13 +133,13 @@
                             android:layout_weight=".4"
                             android:layout_height="match_parent"
                             android:text="@string/branch"
-                            android:textSize="15dp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
                         <TextView
                             android:layout_width="5dp"
                             android:layout_height="match_parent"
                             android:text=":"
-                            android:textSize="15dp"
+                            android:textSize="14dp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -148,7 +148,7 @@
                             android:layout_weight=".6"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="10dp"
-                            android:textSize="15dp"/>
+                            android:textSize="14sp"/>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -161,13 +161,13 @@
                             android:layout_weight=".4"
                             android:layout_height="match_parent"
                             android:text="@string/department"
-                            android:textSize="15dp"
+                            android:textSize="14dp"
                             android:textStyle="bold" />
                         <TextView
                             android:layout_width="5dp"
                             android:layout_height="match_parent"
                             android:text=":"
-                            android:textSize="15dp"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -176,7 +176,7 @@
                             android:layout_weight=".6"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="10dp"
-                            android:textSize="15dp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -205,14 +205,19 @@
             </LinearLayout>
 
 
-            <Button
-                android:layout_marginTop="12dp"
-                android:id="@+id/attendance_btnId"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:text="Submit Attendance"
-                android:background="@drawable/button_shape"/>
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <include
+                    android:id="@+id/btn_login"
+                    layout="@layout/primary_button_large" />
+
+            </LinearLayout>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
