--- a/app/src/main/res/layout/challan_view.xml
+++ b/app/src/main/res/layout/challan_view.xml
@@ -10,6 +10,7 @@
     android:layout_marginTop="1dp"
     android:elevation="10dp"
     android:padding="24dp"
+    android:background="@color/white"
     app:cardCornerRadius="5dp">
 
     <LinearLayout
@@ -31,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
