--- a/app/src/main/res/layout/content_main_home.xml
+++ b/app/src/main/res/layout/content_main_home.xml
@@ -7,30 +7,30 @@
     android:background="@color/colorPrimaryDark">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
         android:id="@+id/appbar_layout"
-        android:background="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
+        android:background="@color/colorPrimaryDark"
         android:gravity="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <ImageView
-            android:layout_marginTop="30dp"
             android:id="@+id/image_view"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_launcher24s"
-            android:layout_gravity="center"/>
+            android:src="@drawable/ic_launcher24s" />
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
         android:id="@+id/nestedscrollview"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
         android:layout_marginBottom="10dp"
+        android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -39,19 +39,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <GridView
-                android:id="@+id/grid"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:columnWidth="100dp"
-                android:gravity="center"
-                android:listSelector="#00000000"
-                android:numColumns="3"
-                android:horizontalSpacing="-10dp"
-                android:verticalSpacing="-10dip"
-                android:divider="@color/colorPrimaryDark"
-                android:dividerHeight="1dip"
-                android:stretchMode="columnWidth" />
+                <GridView
+                    android:id="@+id/grid"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:columnWidth="100dp"
+                    android:divider="@color/colorPrimaryDark"
+                    android:dividerHeight="1dip"
+                    android:gravity="center"
+                    android:horizontalSpacing="-10dp"
+                    android:listSelector="#00000000"
+                    android:numColumns="3"
+                    android:stretchMode="columnWidth"
+                    android:verticalSpacing="-10dip" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
