--- a/app/src/main/res/layout/activity_emp_profile.xml
+++ b/app/src/main/res/layout/activity_emp_profile.xml
@@ -491,6 +491,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/txtAddress"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight=".5"
@@ -504,7 +505,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight=".7"
                             android:autoSizeMaxTextSize="8dp"
-                            android:text="address-aligarh-up"
+                            android:text=""
                             android:editable="false"
                             android:textSize="14sp"
                             android:textColor="@color/primaryTextColor" />
@@ -514,6 +515,21 @@
                             android:layout_height="10dp"
                             android:layout_gravity="center_vertical"
                             android:src="@drawable/ic_mode_edit_black_24dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/txt_address_update_status"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="verifing to HR"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12sp"
+                            android:gravity="right"
+                            android:visibility="gone"
+                            />
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -625,6 +641,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/txt_bankaccount"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight=".5"
@@ -648,6 +665,21 @@
                             android:layout_height="10dp"
                             android:layout_gravity="center_vertical"
                             android:src="@drawable/ic_mode_edit_black_24dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/txt_bank_account_update_status"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="verifing to HR"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12sp"
+                            android:gravity="right"
+                            android:visibility="gone"
+                            />
                     </LinearLayout>
 
                     <LinearLayout
@@ -680,6 +712,21 @@
                             android:layout_gravity="center_vertical"
                             android:src="@drawable/ic_mode_edit_black_24dp"/>
                     </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/txt_bank_name_update_status"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="verifing to HR"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12sp"
+                            android:gravity="right"
+                            android:visibility="gone"
+                            />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -710,6 +757,21 @@
                             android:layout_height="10dp"
                             android:layout_gravity="center_vertical"
                             android:src="@drawable/ic_mode_edit_black_24dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/txt_bank_ifsc_update_status"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="verifing to HR"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12sp"
+                            android:gravity="right"
+                            android:visibility="gone"
+                            />
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
